# vaultchain

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BOOTSTRAP-RUNBOOK.md  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: CLAUDE.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260427_210224_shared_outbox_initial.py  20260427_211800_shared_event_handler_log.py  20260428_103000_identity_initial.py  20260428_120000_identity_user_lockout_columns.py  20260428_140000_identity_admin_user_columns.py
backend/src/vaultchain/: config.py  main.py  worker.py
backend/src/vaultchain/cli/: __init__.py
backend/src/vaultchain/cli/scripts/: seed_admin.py
backend/src/vaultchain/identity/: __init__.py
backend/src/vaultchain/identity/application/: __init__.py  admin_login.py  admin_totp_verify.py  consume_magic_link.py  create_session.py  enroll_totp.py  handlers.py  refresh_session.py  regenerate_backup_codes.py  request_magic_link.py  revoke_session.py  signup_verification_handler.py  verify_totp.py
backend/src/vaultchain/identity/delivery/: composition.py  schemas.py
backend/src/vaultchain/identity/delivery/dependencies/: __init__.py  admin_user.py  csrf.py  current_user.py  pre_totp.py
backend/src/vaultchain/identity/delivery/routes/: __init__.py  admin_auth.py  auth.py  me.py  totp.py
backend/src/vaultchain/identity/domain/: __init__.py  aggregates.py  errors.py  events.py  ports.py  value_objects.py
backend/src/vaultchain/identity/infra/: bcrypt_password_hasher.py  orm.py  repositories.py  totp_encryptor.py
backend/src/vaultchain/identity/infra/email/: __init__.py  console.py  resend.py
backend/src/vaultchain/identity/infra/tokens/: __init__.py  cookies.py  generator.py  hashing.py  magic_link_generator.py  pre_totp_cache.py  redis_cache.py
backend/src/vaultchain/identity/infra/totp/: __init__.py  backup_codes.py  pyotp_checker.py
backend/src/vaultchain/shared/delivery/: __init__.py  error_handlers.py  idempotency.py  middleware.py
backend/src/vaultchain/shared/domain/: __init__.py  errors.py  ports.py
backend/src/vaultchain/shared/events/: __init__.py  backoff.py  base.py  bus.py  registry.py
backend/src/vaultchain/shared/infra/: __init__.py  database.py  event_bus.py  idempotency.py  outbox_publisher.py  unit_of_work.py
backend/src/vaultchain/shared/observability/: __init__.py  sentry.py
backend/src/vaultchain/shared/unit_of_work/: __init__.py  base.py
backend/tests/: conftest.py  test_app_factory.py  test_config.py
backend/tests/api/: _app_fixture.py  test_admin_auth.py  test_auth_flow.py  test_error_envelope.py
backend/tests/architecture/: test_layering.py
backend/tests/cli/: test_seed_admin.py
backend/tests/identity/application/: test_admin_login.py  test_admin_totp_verify.py  test_consume_magic_link.py  test_consume_magic_link_idempotency_properties.py  test_create_session.py  test_enroll_totp.py  test_get_current_user_dependency.py  test_lockout_handler.py  test_lockout_state_machine_properties.py  test_refresh_session.py  test_regenerate_backup_codes.py  test_request_magic_link.py  test_revoke_session.py  test_session_lifecycle_properties.py  test_signup_verification_handler.py  test_verify_totp.py
backend/tests/identity/delivery/: test_email_sender_selection.py  test_pre_totp_dependency.py
backend/tests/identity/domain/: test_admin_user_aggregate.py  test_email_vo.py  test_email_vo_properties.py  test_magic_link.py  test_password_hasher_properties.py  test_password_policy.py  test_session.py  test_totp_secret.py  test_user.py  test_user_lockout.py
backend/tests/identity/fakes/: fake_access_token_cache.py  fake_backup_code_service.py  fake_email_sender.py  fake_encryptor.py  fake_magic_link_token_generator.py  fake_password_hasher.py  fake_pre_totp_cache.py  fake_repositories.py  fake_token_generator.py  fake_totp_checker.py  fake_uow.py
backend/tests/identity/infra/: test_backup_code_hashing.py  test_bcrypt_password_hasher.py  test_console_email_sender.py  test_cookie_helpers.py  test_lockout_migration.py  test_migrations.py  test_orm_and_ports_smoke.py  test_pyotp_code_checker.py  test_redis_access_token_cache.py  test_refresh_token_generator.py  test_repositories.py  test_resend_email_sender.py  test_secrets_magic_link_token_generator.py  test_static_key_totp_encryptor.py
backend/tests/shared/application/: test_idempotency_middleware.py  test_idempotency_replay_properties.py  test_outbox_publisher_loop.py  test_request_id_propagation.py  test_unit_of_work_capture.py
backend/tests/shared/domain/: test_backoff.py  test_domain_error_subclassing.py  test_domain_event_serialization_properties.py  test_event_bus_protocol.py  test_idempotency_store_protocol.py  test_outbox_idempotency_properties.py  test_unit_of_work_protocol.py
backend/tests/shared/fakes/: fake_uow.py
backend/tests/shared/infra/: test_errors_reference_generator.py  test_outbox_publisher_worker.py  test_redis_idempotency_store.py  test_sqlalchemy_unit_of_work.py
docs/: api-contract.yaml  data-model.md  errors-reference.md  runbook.md  security-model.md
phase1-briefs/: _PHASE1-SUMMARY.md  _frontmatter-schema.yaml  phase1-admin-001.md  phase1-admin-002.md  phase1-admin-002a.md  phase1-admin-002b.md  phase1-admin-003.md  phase1-deploy-001.md  phase1-identity-001.md  phase1-identity-002.md  phase1-identity-003.md  (+11 more)
(+209 files in other folders)
